--- a/test/smoke/Dockerfile
+++ b/test/smoke/Dockerfile
@@ -1,7 +1,13 @@
 FROM alpine:latest
 
+RUN useradd -m appuser
+
+USER appuser
+
 RUN apk add curl
 
 COPY smoke-test.sh smoke-test.sh
 
 CMD ["sh", "smoke-test.sh", "http://app:3000"]
+
+HEALTHCHECK --interval=30s --timeout=3s --retries=3 CMD curl -f http://localhost/health || exit 1
